--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sharp": "^0.34.3"
   }
 }
